--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,29 @@
 ---
-title: "johann-wagner"
+title: "Johann Wagner"
 ---
 
-This is a Quarto website.
+### Hi, I'm Johann! 🖐
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+#### Nice to meet you! 😊
 
-```{r}
-1 + 1
-```
+I'm an economic/data analyst at the Department of Education (Australian Government). I completed my Bachelor of Economics minoring in [Econometrics](https://programsandcourses.anu.edu.au/2023/minor/emet-min) and Bachelor of Science majoring in [Quantitative Environmental Modelling](https://programsandcourses.anu.edu.au/2023/major/quem-maj) and minoring in [Applied Statistics](https://programsandcourses.anu.edu.au/2023/minor/apst-min) from the Australian National University in 2023.
+
+##### Passion
+
+-   Data Analysis
+-   Data Visualisation
+-   Public Health Data
+
+##### Extra-Curricalar
+
+-   Co-Chair Data Analyst Network 2024
+
+##### You can contact me via:
+
+-   [LinkedIn](https://www.linkedin.com/in/johannwagner/)
+-   [GitHub](https://github.com/johann-wagner)
+-   Email: [johann.wagner@gmail.com](mailto:johann.wagner@gmail.com)
+
+This website was built using [Quarto](https://quarto.org/).
+
+💅💅💅
