--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@
 
 #### Nice to meet you! 😊
 
-I'm an economic/data analyst at the Department of Education (Australian Government). I completed my Bachelor of Economics minoring in [Econometrics](https://programsandcourses.anu.edu.au/2023/minor/emet-min) and Bachelor of Science majoring in [Quantitative Environmental Modelling](https://programsandcourses.anu.edu.au/2023/major/quem-maj) and minoring in [Applied Statistics](https://programsandcourses.anu.edu.au/2023/minor/apst-min) from the Australian National University in 2023. You can access my CV [here](../cv/index.qmd).
+I'm an economic/data analyst at the Department of Education (Australian Government). I completed my Bachelor of Economics minoring in [Econometrics](https://programsandcourses.anu.edu.au/2023/minor/emet-min) and Bachelor of Science majoring in [Quantitative Environmental Modelling](https://programsandcourses.anu.edu.au/2023/major/quem-maj) and minoring in [Applied Statistics](https://programsandcourses.anu.edu.au/2023/minor/apst-min) from the Australian National University in 2023. You can access my CV [here](cv/index.qmd).
 
 ##### Passion
 
@@ -16,6 +16,11 @@ I'm an economic/data analyst at the Department of Education (Australian Governme
 ##### Extra-Curricalar
 
 -   Co-Chair Data Analyst Network 2024
+-   Ultimate Frisbee
+-   Adventure Racing
+-   Rogaining
+-   Mountain Biking
+-   Running
 
 ##### You can contact me via:
 
