--- a/posts/index.qmd
+++ b/posts/index.qmd
@@ -5,10 +5,8 @@ listing:
   sort: "date desc"
   type: default
   categories: true
-  sort-ui: false
-  filter-ui: false
-page-layout: full
-title-block-banner: true
+  sort-ui: true
+  filter-ui: true
 ---
 
 Welcome to Johann's posts sub-page.
