--- a/posts/index.qmd
+++ b/posts/index.qmd
@@ -7,6 +7,8 @@ listing:
   categories: true
   sort-ui: true
   filter-ui: true
+page-layout: full
+title-block-banner: true
 ---
 
 Welcome to Johann's posts sub-page.
