--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,8 @@
 
 #### Nice to meet you! 😊
 
+
+                
 I'm an economic/data analyst at the Department of Education (Australian Government). I completed my Bachelor of Economics minoring in [Econometrics](https://programsandcourses.anu.edu.au/2023/minor/emet-min) and Bachelor of Science majoring in [Quantitative Environmental Modelling](https://programsandcourses.anu.edu.au/2023/major/quem-maj) and minoring in [Applied Statistics](https://programsandcourses.anu.edu.au/2023/minor/apst-min) from the Australian National University in 2023. You can access my CV [here](cv/index.qmd).
 
 ##### Passion
@@ -31,3 +33,49 @@ I'm an economic/data analyst at the Department of Education (Australian Governme
 This website was built using [Quarto](https://quarto.org/). The source code can be found [here](https://github.com/johann-wagner/johann-wagner). I'd like to thank [Marvin Schmitt](https://www.marvinschmitt.com/blog/website-tutorial-quarto/) and [Melissa Van Bussell](https://youtu.be/nuYNCPRf8Js?si=mL9L7ic3PdJcs5C7) for their tutorials on how to build a website using Quarto.
 
 💅💅💅
+
+
+DRAFT
+
+Here's some hypothetical R code for inspiration:
+johann_wagner <- my_life |>
+                group_by(experience, education) |>
+                summarise(passion = "Data-driven Insights", values = "Balance, Love, Community", creativity = "Thanks ChatGPT")
+                
+Dear ChatGPT...  Please write me a LinkedIn "About" section using my resume below as a guide. Make it fun, but still informative and under 2,600 characters. Ensure to have plenty of fun emojis! Thanks! 😋
+🔍🔍🔍🔍🔍  See the "result" below!  🔍🔍🔍🔍🔍
+
+
+👋 👋 👋  Hey there, hopefully that caught your attention!! 👋 👋 👋 
+My name is Johann. 😋
+I have a passion for continuous self-learning and data-driven solutions. 📊📚💡
+
+📈 My Broad Goals:
+- 🚴 Embrace time spent with my friends and family nourishing the fun adventures had! 😋
+- 💻 Navigate the vast realm of data analytics and data science and try and figure out where I best fit in! 
+- ✏️ Immersing myself in the data science community by sharing my data projects on my website and on LinkedIn
+- 🧪 Contribute to open source software and promote Open Science! 
+
+🌱 My Current Experience:
+- 🔬 designed and implemented economic modeling using statistical and econometric methods, 
+- 📈 upskilled my team and the Department with R tips and best practices,
+- 💼 conducted literature reviews and communicating with simple, yet impactful data visualisations, 
+- 💡 championed the integration of generative AI tools in R programming.
+
+🎓 My Education:
+I finished a Bachelor of Economics and a Bachelor of Science, specialising in quantitative environmental modeling, econometrics, and applied statistics. Although I'm thinking about doing honours and potentially further research down the line. 🔬🧪
+
+ ✍🏼 My Website:
+I've only recently created this website, but I'll be sharing some insights from my data projects:
+https://johann-wagner.github.io/johann-wagner/
+
+🤓 My GitHub:
+This is where I store most of my data projects.
+https://github.com/johann-wagner
+
+✅ Moving Forward:
+- Nice to meet you!
+- I'm always keen to chat about data science!
+- So feel free to reach out to me on LinkedIn or via email or any other method you prefer!
+
+THANKS FOR READING UNTL THE END 💅💅💅
