--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,24 @@
-# Welcome!
+---
+title: "Johann Wagner"
+image: "images/jw_professional_photo_close.png"
+toc: false
+about:
+  template: solana
+  image-shape: round
+  image-width: 20em
+  links:
+    - text: LinkedIn
+      href: https://www.linkedin.com/in/johannwagner/
+    - text: Github
+      href: https://github.com/johann-wagner
+    - text: Email
+      href: "mailto:johann.wagner@gmail.com"
+---
 
 ### Hi, I'm Johann! 🖐
-
 #### Nice to meet you! 😊
 
-
-                
+##### About Me
 I'm an economic/data analyst at the Department of Education (Australian Government). I completed my Bachelor of Economics minoring in [Econometrics](https://programsandcourses.anu.edu.au/2023/minor/emet-min) and Bachelor of Science majoring in [Quantitative Environmental Modelling](https://programsandcourses.anu.edu.au/2023/major/quem-maj) and minoring in [Applied Statistics](https://programsandcourses.anu.edu.au/2023/minor/apst-min) from the Australian National University in 2023. You can access my CV [here](cv/index.qmd).
 
 ##### Passion
