Add extra sentence to about me

--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,7 @@ about:
 
 ---
 
-I'm an economic/data analyst at the [Department of Education](https://www.education.gov.au/) (Australian Government). I completed my Bachelor of Economics and Bachelor of Science specialising in [Quantitative Environmental Modelling](https://programsandcourses.anu.edu.au/2023/major/quem-maj), [Econometrics](https://programsandcourses.anu.edu.au/2023/minor/emet-min), and [Applied Statistics](https://programsandcourses.anu.edu.au/2023/minor/apst-min) at the Australian National University (2023). 📊📚💡
+I'm an economic/data analyst at the [Department of Education](https://www.education.gov.au/) (Australian Government). I completed my Bachelor of Economics and Bachelor of Science specialising in [Quantitative Environmental Modelling](https://programsandcourses.anu.edu.au/2023/major/quem-maj), [Econometrics](https://programsandcourses.anu.edu.au/2023/minor/emet-min), and [Applied Statistics](https://programsandcourses.anu.edu.au/2023/minor/apst-min) at the Australian National University (2023). I love learning about data science, quality time with friends, endurance sports, and travelling. 📊📚💡
 
 ---
 
