--- a/index.qmd
+++ b/index.qmd
@@ -72,7 +72,7 @@ Here are some useful links you might be interested in:
 
 - 💼 [My CV](cv/index.qmd)
 - 📊 [My Data Projects](projects/index.qmd)
-- ✏️️ [My Blog](blog/index.qmd)
+- ✏️️ [My Blog](posts_sub_page/index.qmd)
 - 🤓 [My GitHub](https://github.com/johann-wagner)
 
 ---
