--- a/index.qmd
+++ b/index.qmd
@@ -55,9 +55,10 @@ I'm an economic/data analyst at the [Department of Education](https://www.educat
 ---
 
 ##### 🌱 My Current Experience:
-- Designed and implemented economic modelling using **statistical and econometric methods** 🔬
-- Upskilled my team and the Department **promoting data culture, best coding practices,** and improved workflows using modularised R Project environments 📈
-- Conducted literature reviews and **communicating complex models with simple language** and impactful data visualisations 💼
+- Economic / Data Analyst at the [Australian Government Department of Education](https://www.education.gov.au/) (2023 - Present) 🏛
+- Intern Consultant at [Nous Group](https://nousgroup.com/) (2022) 💼
+- Student Data Scientist at the [Australian Bureau of Statistics](https://www.abs.gov.au/) (2022) 📊
+- Data Officer at [ACT Health](https://www.health.act.gov.au/) (2021 - 2022) 🦠
 
 ---
 
