--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -17,7 +17,7 @@ title-block-banner: true
   </a>
 </p>
 <div class="embed-container">
-  <iframe src="`r rmarkdown::metadata$cv$pdf`#toolbar=0" style="border: 0.5px;width: 100%;"></iframe>
+  <iframe src="`r rmarkdown::metadata$cv$pdf`#toolbar=0" style="border: 0.5px;width: 100%; height: 1500px;"></iframe>
 </div>
 ```
 
