--- a/blog/index.qmd
+++ b/blog/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Posts"
+title: "Blog"
 listing:
   contents: posts
   sort: "date desc"
@@ -11,12 +11,13 @@ page-layout: full
 title-block-banner: true
 ---
 
-Welcome to Johann's Knowledge Sharing Posts.
+Welcome to Johann's Knowledge Sharing Blog.
 
-I write a variety of content:
+I write about a bunch of different things:
 
 - one-off data analysis
 - useful R tips and tricks
-- blog posts
+- personal blog posts
+- bikepacking
 
 I hope you find something useful here! 😊
